--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -30,3 +30,5 @@ test:
 
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  RECAPTCHA_SITE_KEY: '6LfG-7UUAAAAAMN8FwxPSjq3rI6poKSwL2i6l1TW'
+  RECAPTCHA_SECRET_KEY: '6LfG-7UUAAAAACPwO9SIjVjsKP23w6GvJaT87NQE'
